Added decimal numbers

--- a/index.html
+++ b/index.html
@@ -45,26 +45,26 @@
 
             <div class="buttons theme-2-body-main buttons-all">
                 <div class="first-line line" id="line01">
-                    <button onclick="callNumber(7)" class="btn theme-2-keys-back">7</button>
-                    <button onclick="callNumber(8)" class="btn theme-2-keys-back">8</button>
-                    <button onclick="callNumber(9)" class="btn theme-2-keys-back">9</button>
+                    <button onclick="callNumber('7')" class="btn theme-2-keys-back">7</button>
+                    <button onclick="callNumber('8')" class="btn theme-2-keys-back">8</button>
+                    <button onclick="callNumber('7')" class="btn theme-2-keys-back">9</button>
                     <button onclick="" class="btn btn-del theme-2-keys-reset-back btn-del-res">del</button>
                 </div>
                 <div  class="second-line line" id="line02">
-                    <button onclick="callNumber(4)" class="btn theme-2-keys-back">4</button>
-                    <button onclick="callNumber(5)" class="btn theme-2-keys-back">5</button>
-                    <button onclick="callNumber(6)" class="btn theme-2-keys-back">6</button>
+                    <button onclick="callNumber('4')" class="btn theme-2-keys-back">4</button>
+                    <button onclick="callNumber('5')" class="btn theme-2-keys-back">5</button>
+                    <button onclick="callNumber('6')" class="btn theme-2-keys-back">6</button>
                     <button onclick="operation('+')" class="btn theme-2-keys-back">+</button>
                 </div>
                 <div class="third-line line" id="line03">
-                    <button onclick="callNumber(1)" class="btn theme-2-keys-back">1</button>
-                    <button onclick="callNumber(2)" class="btn theme-2-keys-back">2</button>
-                    <button onclick="callNumber(3)" class="btn theme-2-keys-back">3</button>
+                    <button onclick="callNumber('1')" class="btn theme-2-keys-back">1</button>
+                    <button onclick="callNumber('2')" class="btn theme-2-keys-back">2</button>
+                    <button onclick="callNumber('3')" class="btn theme-2-keys-back">3</button>
                     <button onclick="operation('-')" class="btn theme-2-keys-back">-</button>
                 </div>
                 <div class="fourth-line line" id="line04">
-                    <button onclick="" class="btn theme-2-keys-back">.</button>
-                    <button onclick="callNumber(0)" class="btn theme-2-keys-back">0</button>
+                    <button onclick="callNumber('.')" class="btn theme-2-keys-back">.</button>
+                    <button onclick="callNumber('0')" class="btn theme-2-keys-back">0</button>
                     <button onclick="operation('/')" class="btn theme-2-keys-back">/</button>
                     <button onclick="operation('*')" class="btn theme-2-keys-back">*</button>
                 </div>
