--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <div class="first-line line" id="line01">
                     <button onclick="callNumber('7')" class="btn theme-2-keys-back">7</button>
                     <button onclick="callNumber('8')" class="btn theme-2-keys-back">8</button>
-                    <button onclick="callNumber('7')" class="btn theme-2-keys-back">9</button>
-                    <button onclick="" class="btn btn-del theme-2-keys-reset-back btn-del-res">del</button>
+                    <button onclick="callNumber('9')" class="btn theme-2-keys-back">9</button>
+                    <button onclick="del()" class="btn btn-del theme-2-keys-reset-back btn-del-res">del</button>
                 </div>
                 <div  class="second-line line" id="line02">
                     <button onclick="callNumber('4')" class="btn theme-2-keys-back">4</button>
